# kinetix

./: .gitignore  .gitmodules  Cargo.toml  README.md  README_zh.md  TODO.md
benchmarks/: Cargo.toml  README.md
benchmarks/pinocchio/: CMakeLists.txt  bench_pinocchio.cpp
benchmarks/scripts/: compare.py  compare_correctness.py  run_kinetix.ps1  run_pinocchio.ps1
benchmarks/src/: main.rs
kinetix/: Cargo.toml
kinetix-autodiff/: Cargo.toml
kinetix-autodiff/src/: derivatives.rs  lib.rs  scalar.rs
kinetix-autodiff/tests/: rnea_derivatives.rs
kinetix-core/: Cargo.toml
kinetix-core/src/: data.rs  joints.rs  lib.rs  model.rs
kinetix-core/src/algorithms/: aba.rs  crba.rs  mod.rs  rnea.rs  spatial.rs
kinetix-core/tests/: dynamics.rs
kinetix-py/: Cargo.toml
kinetix-spatial/: Cargo.toml
kinetix-spatial/src/: force.rs  frames.rs  inertia.rs  lib.rs  motion.rs  scalar.rs  transform.rs
kinetix-urdf/: Cargo.toml
kinetix-urdf/src/: converter.rs  lib.rs  topology.rs
kinetix-urdf/tests/: urdf_loading.rs
kinetix/examples/: 01_spatial_algebra.rs  02_inverse_dynamics.rs  03_forward_dynamics_roundtrip.rs  04_mass_matrix.rs  05_urdf_loading.rs  06_rnea_derivatives.rs  07_realtime_data_reuse.rs  README.md
kinetix/examples/common/: mod.rs
kinetix/src/: lib.rs
