[package]
name = "kinetix-autodiff"
version = "0.1.0"
edition = "2024"

[dependencies]
kinetix-core = { path = "../kinetix-core" }
kinetix-spatial = { path = "../kinetix-spatial" }
nalgebra = { version = "0.34", default-features = false, features = ["macros"] }
num-traits = { version = "0.2", default-features = false }
