[package]
name = "kinetix-core"
version = "0.1.0"
edition = "2024"
authors = ["Yixing <yanjizhou312@163.com>"]
description = "Allocation-free no_std rigid-body dynamics algorithms for Kinetix."
readme = "../README.md"
repository = "https://github.com/Robot-Exp-Platform/kinetix"
license = "Apache-2.0"
categories = ["science::robotics"]

[dependencies]
kinetix-spatial = { version = "0.1.0", path = "../kinetix-spatial" }
nalgebra = { version = "0.34", default-features = false, features = ["macros"] }
