[package]
name = "kinetix-py"
version = "0.1.0"
edition = "2024"
authors = ["Yixing <yanjizhou312@163.com>"]
description = "Python binding placeholder crate for Kinetix."
readme = "../README.md"
repository = "https://github.com/Robot-Exp-Platform/kinetix"
license = "Apache-2.0"
categories = ["science::robotics"]

[dependencies]
