[package]
name = "kinetix"
version = "0.1.0"
edition = "2024"
authors = ["Yixing <yanjizhou312@163.com>"]
description = "Rust-first rigid-body dynamics with type-driven frame safety."
readme = "../README.md"
repository = "https://github.com/Robot-Exp-Platform/kinetix"
license = "Apache-2.0"
categories = ["science::robotics"]

[dependencies]
kinetix-autodiff = { version = "0.1.0", path = "../kinetix-autodiff" }
kinetix-core = { version = "0.1.0", path = "../kinetix-core" }
kinetix-spatial = { version = "0.1.0", path = "../kinetix-spatial" }
kinetix-urdf = { version = "0.1.0", path = "../kinetix-urdf" }
